--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.3.0
 beautifulsoup4==4.13.4
 certifi==2025.8.3
 charset-normalizer==3.4.3
@@ -11,6 +15,7 @@ dotenv==0.9.9
 feedfinder2==0.0.4
 feedparser==6.0.11
 filelock==3.19.1
+frozenlist==1.7.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -21,12 +26,15 @@ jiter==0.10.0
 joblib==1.5.1
 llama_cpp_python==0.3.15
 lxml==6.0.0
+lxml_html_clean==0.4.2
 MarkupSafe==3.0.2
+multidict==6.6.4
 newspaper3k==0.2.8
 nltk==3.9.1
 numpy==2.3.2
-openai==1.99.9
+openai==0.28.0
 pillow==11.3.0
+propcache==0.3.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
@@ -45,3 +53,4 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
+yarl==1.20.1
